--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,8 @@
 
 html,
 body {
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
 
@@ -76,4 +78,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1;
 }
